backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/Hyrto_Inspection__c.object-meta.xml
<CustomObject>
    <label>Avsyning</label>
    <pluralLabel>Avsyningar</pluralLabel>
    <nameField>
        <displayFormat>INS-{0000}</displayFormat>
        <label>Avsynings-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>