backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Hyrobjekt</label>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Avsyningar</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>