backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Bokning</label>
    <type>Lookup</type>
    <referenceTo>Hyrto_Booking__c</referenceTo>
    <relationshipLabel>Avsyningar</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>