backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/CleanExterior__c.field-meta.xml
<CustomField>
    <fullName>CleanExterior__c</fullName>
    <label>Rent utvändigt (1-5)</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
</CustomField>