backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/CleanInterior__c.field-meta.xml
<CustomField>
    <fullName>CleanInterior__c</fullName>
    <label>Rent inuti (1-5)</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
</CustomField>