backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/CustomerSignature__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignature__c</fullName>
    <label>Kundens kvittering</label>
    <type>Text</type>
    <length>200</length>
</CustomField>