backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/DamageNotes__c.field-meta.xml
<CustomField>
    <fullName>DamageNotes__c</fullName>
    <label>Skadebeskrivning</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>