backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/DamagePhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>DamagePhotoUrl__c</fullName>
    <label>Fotolänk (skada)</label>
    <type>Url</type>
</CustomField>