backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/DamagesFound__c.field-meta.xml
<CustomField>
    <fullName>DamagesFound__c</fullName>
    <label>Skador hittade</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>