backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/DoorLockOK__c.field-meta.xml
<CustomField>
    <fullName>DoorLockOK__c</fullName>
    <label>Dörr/lås OK</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>