backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/ExtraCleaningFee__c.field-meta.xml
<CustomField>
    <fullName>ExtraCleaningFee__c</fullName>
    <label>Extrakostnad städning</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>