backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/ExtraCleaningNeeded__c.field-meta.xml
<CustomField>
    <fullName>ExtraCleaningNeeded__c</fullName>
    <label>Extra städning behövs</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>