backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/InspectionDate__c.field-meta.xml
<CustomField>
    <fullName>InspectionDate__c</fullName>
    <label>Avsyningsdatum</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>