backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <label>Avsynd av</label>
    <type>Text</type>
    <length>100</length>
</CustomField>