backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Anteckningar</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>