backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/OverallCondition__c.field-meta.xml
<CustomField>
    <fullName>OverallCondition__c</fullName>
    <label>Övergripande skick</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Rent</fullName><default>false</default><label>Rent</label></value>
            <value><fullName>OK</fullName><default>false</default><label>OK</label></value>
            <value><fullName>Smutsigt</fullName><default>false</default><label>Smutsigt</label></value>
            <value><fullName>Skadat</fullName><default>false</default><label>Skadat</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>