backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/PaperHolderFull__c.field-meta.xml
<CustomField>
    <fullName>PaperHolderFull__c</fullName>
    <label>Pappershållare fylld</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>