backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Typ</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Utleverans</fullName><default>true</default><label>Utleverans</label></value>
            <value><fullName>Inleverans</fullName><default>false</default><label>Inleverans</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>