backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/VentilationOK__c.field-meta.xml
<CustomField>
    <fullName>VentilationOK__c</fullName>
    <label>Ventilation OK</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>