backend/hyrto-schema/force-app/main/default/objects/Hyrto_Inspection__c/fields/WaterTankFull__c.field-meta.xml
<CustomField>
    <fullName>WaterTankFull__c</fullName>
    <label>Vattentank full</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>